force-app/main/default/objects/Country_Name_Dial_code__mdt/Country_Name_Dial_code__mdt.object-meta.xml
<CustomObject>
    <label>Country Name Dial code</label>
    <pluralLabel>Country Name Dial codes</pluralLabel>
</CustomObject>