force-app/main/default/objects/Country_Name_Dial_code__mdt/fields/Country_Name_Dial_code__c.field-meta.xml
<CustomField>
    <fullName>Country_Name_Dial_code__c</fullName>
    <label>Country Name Dial code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>