force-app/main/default/objects/Country_Name_Dial_code__mdt/fields/CountryDialcode__c.field-meta.xml
<CustomField>
    <fullName>CountryDialcode__c</fullName>
    <label>CountryDialcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>