force-app/main/default/objects/Country_Name_Dial_code__mdt/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>CountryName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>