force-app/main/default/objects/Country_Name_Dial_code__mdt/fields/dial__c.field-meta.xml
<CustomField>
    <fullName>dial__c</fullName>
    <label>code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>