force-app/main/default/objects/Country_Name_Dial_code__mdt/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>